# ai-system-builder

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  Containerfile  README.md  forge.config.ts  incomplete-work-register.md  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.src-only.json  vite.config.ts  vite.main.config.ts  vite.preload.config.ts  vite.renderer.config.ts
python-runtime/: .env.example  README.md  pyproject.toml  requirements.txt
python-runtime/app/: main.py
python-runtime/app/api/: dependencies.py
python-runtime/app/api/routes/: datasets.py  documents.py  execute.py  health.py  mcp.py  training.py  workflows.py
python-runtime/app/core/: config.py  errors.py  mcp_config.py
python-runtime/app/execution/: agent_tool_orchestrator.py  langchain_executor.py  node_dispatcher.py  workflow_executor.py  workflow_state.py
python-runtime/app/mcp/: client.py  models.py  persistence.py  provisioning.py  registry.py  service.py  session.py
python-runtime/app/models/: document_ingestion.py  requests.py  responses.py  runtime.py
python-runtime/app/services/: dataset_generation_service.py  document_conversion_service.py  health_service.py  model_training_service.py  runtime_service.py
python-runtime/tests/: test_cors.py  test_document_route.py  test_execute_route.py  test_health_route.py  test_langchain_executor.py  test_mcp_config.py  test_mcp_provisioning.py  test_mcp_route.py  test_mcp_runtime_transports.py  test_mcp_service.py  test_training_route.py  test_workflow_executor.py  test_workflows_route.py
(+9683 files in other folders)
