[project]
name = "ai-loom-python-runtime"
version = "0.1.0"
description = "FastAPI runtime for AI Loom Studio python-native execution"
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.115.2",
  "uvicorn[standard]==0.30.6",
  "pydantic==2.9.2",
  "pydantic-settings==2.5.2",
  "langchain-core==0.3.10",
  "langchain-text-splitters==0.3.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
